# laboratorio

./: .gitignore  CMakeLists.txt  CMakePresets.json  compileShaders.command  compileShaders.ps1  compileShaders.sh  init.cpp  laboratorio.code-workspace  vcpkg.json
shaders/: simple_shader.frag
src/: first_app.cpp  first_app.hpp  lve_device.cpp  lve_device.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_window.cpp  lve_window.hpp  main.cpp  main.h  vulPlay.cpp  vulPlay.hpp
